--- a/SharpSchedule.WPF/Views/Dialogs/AlarmDialog.xaml
+++ b/SharpSchedule.WPF/Views/Dialogs/AlarmDialog.xaml
@@ -28,11 +28,9 @@
     <Label Grid.Column="1" Content="{Binding WindowLabel}" HorizontalAlignment="Left" 
            VerticalAlignment="Bottom" FontSize="24" Margin="0, 5" />
 
-    <controls:AnalogClock Grid.Column="1" Grid.Row="1" HorizontalAlignment="Center" 
-                          VerticalAlignment="Center" />
+    
     <controls:DigitalClock Grid.Column="1" Grid.Row="2" HorizontalAlignment="Center"
-                           VerticalAlignment="Center" FontSize="24" 
-                           Alarm="{Binding AlarmOn, UpdateSourceTrigger=PropertyChanged, Mode=OneWay}" />
+                           VerticalAlignment="Center" FontSize="24" Alarm="{Binding AlarmOn}" />
     
     
   </Grid>
